@@ -161,6 +161,15 @@ void	BspDemo::initPhysics(char* bspfilename)
 		bspfilename = "../../BspDemo.bsp";
 		file = fopen(bspfilename,"r");
 	}
+	if (!file)
+	{
+		//try again other path, 
+		//sight... visual studio leaves the current working directory in the projectfiles folder
+		//instead of executable folder. who wants this default behaviour?!?
+		bspfilename = "BspDemo.bsp";
+		file = fopen(bspfilename,"r");
+	}
+
 	if (file)
 	{
 		BspLoader bspLoader;
